feat:incluye la implementaciòn de las us 09,16, 24